tests/expression/faulty_case_body.sy
A :: enum
    A
end

f :: fn -> int
    case A.A do
        A ->
            ret "abc"
        end
    end
    1
end

start :: fn do end

// error: A 'str' cannot be a 'int'
